# SWORDS-UU

./: setup.cfg  tox.ini
collect_users/: README.md  analyze_users.ipynb  run_pipeline.sh
collect_variables/: analyze_metrics.ipynb
src/swords/: __init__.py
src/swords/users/methods/github_search/: README.md
src/swords/users/methods/papers_with_code/: README.md
src/swords/users/methods/profile_pages/: README.md
src/swords/users/methods/pure/: README.md
tests/integration/: test_integration_repos.py  test_integration_user.py  test_integration_variables.py
tests/unit/: test_repository_scripts.py  test_user_methods.py  test_user_scripts.py  test_variable_scripts.py
