##########################
# Setup.py Configuration #
##########################
[metadata]
name = swords
version = 0.0.1-dev
license = MIT
license_files =
    LICENSE

[options]
install_requires =
    beautifulsoup4
    fastcore
    ghapi
    howfairis
    jupyterlab
    matplotlib
    openpyxl
    pandas
    paperswithcode-client
    python-dotenv
    requests
    rispy
    scikit_learn
    scipy
    seaborn
    simplejson

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
